<resources>
    <string name="app_name">chatocity</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="not_a_user_sign_up">New here? <b>Register</b></string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_notes">Notes</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>
    <string name="Student_Name">Student Name</string>
    <string name="regno">RA2011003020050</string>
    <string name="sec">CSE-J</string>
    <string name="year">2020-2024</string>
</resources>