<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/title_chat" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_description_24"
            android:title="@string/title_notes" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/title_settings" />



    </group>

</menu>